--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-"scripts": {
-    "dev": "npx @tailwindcss/cli -i ./src/input.css -o ./dist/css/output.css --watch",
-    "build": "npx @tailwindcss/cli -i ./src/input.css -o ./dist/css/output.css --minify --content \"./dist/**/*.html\""
+  "scripts": {
+    "dev": "vite", 
+    "build": "vite build",
+    "preview": "vite preview",
+    "tw:dev": "npx @tailwindcss/cli -i ./src/input.css -o ./dist/css/output.css --watch",
+    "tw:build": "npx @tailwindcss/cli -i ./src/input.css -o ./dist/css/output.css --minify --content \"./dist/**/*.html\""
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.12",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "vite": "^7.1.5"
+  },
+  "dependencies": {
+    "aos": "^2.3.4",
+    "feather-icons": "^4.29.2"
   }
 }
-
